Update Chapter 1 - Setting Up for Success.ipynb

--- a/Chapter 1 - Setting Up for Success.ipynb
+++ b/Chapter 1 - Setting Up for Success.ipynb
@@ -228,7 +228,7 @@
     "deletable": false,
     "editable": false,
     "run_control": {
-     "frozen": true
+     "frozen": FALSE
     }
    },
    "source": [
