Update Chapter 01 - Before Learning Anything Else, Learn This.ipynb

--- a/Chapter 01 - Before Learning Anything Else, Learn This.ipynb
+++ b/Chapter 01 - Before Learning Anything Else, Learn This.ipynb
@@ -45,7 +45,7 @@
     "    </strong><a class=\"tocSkip\"></a></div><br>\n",
     "The proposal went on to make the following claim:<br><br>\n",
     "<div align=\"center\"><strong>\n",
-    "\"There is enough (anecdotal) evidence that Python is easy to<br>learn for people who are (nearly) computer-illiterate.\"\n",
+    "\"There is enough (anecdotal) evidence that Python is easy to<br>learn for people who are (nearly) computer-illiterate.\"\n""\n",
     "    </strong><a class=\"tocSkip\"></a></div>\n",
     "\n",
     "This proposal, which was submitted by van Rossum and the <em>Python in Education Special Interest Group</em> <a href=\"https://www.python.org/doc/essays/everybody/\">can be found here</a>. It is an interesting read and makes some very good points. However, even though Python may be easy to learn, <strong>it is important to learn how to learn Python, and that is the purpose of this chapter.</strong> At times, you will get stuck, and you need to know what to do. There will also be many times when your code won't run properly, even when you've spent hours trying to debug it. This is very frustrating, and it is something all coders experience from time to time. The good news is that as long as you are not one of the world's most advanced Python coders, someone has already experienced and solved your problem. More importantly, it is very likely that a solution to your problem has been generously shared to the open source community. All you need to know is where to find it. Not knowing can be devastating to your morale. To exemplify this, the following story is from one of my former students, which took place while conducting an analysis for the course: Machine Learning.<br><br>\n",
