Update Chapter 04 - Numbers, Comparisons, and Randomness.ipynb

--- a/Chapter 04 - Numbers, Comparisons, and Randomness.ipynb
+++ b/Chapter 04 - Numbers, Comparisons, and Randomness.ipynb
@@ -57,7 +57,7 @@
     }
    },
    "source": [
-    "<br>As you may remember from <strong>Chapter 1 - Setting Up for Success</strong>, Python has been designed to be easy to learn, and numerical operands are no exception. To clarify, a <strong>numerical operand</strong> is a character that has a special meaning, allowing users to perform computational operations. For example, the <em><strong>+</strong></em> operand allows users to add two things together. These things can be numbers or something more exotic (for example, strings or more complicated objects). Below is a table of some of the more familiar numerical operands.\n",
+    "<br>As you may remember from <strong>Chapter 1 - Before Learning Anything Else, Learn This</strong>, Python has been designed to be easy to learn, and numerical operands are no exception. To clarify, a <strong>numerical operand</strong> is a character that has a special meaning, allowing users to perform computational operations. For example, the <em><strong>+</strong></em> operand allows users to add two things together. These things can be numbers or something more exotic (for example, strings or more complicated objects). Below is a table of some of the more familiar numerical operands.\n",
     "<br><br>\n",
     "\n",
     "<table width=\"375\" align=\"left\">\n",
