Update Chapter 09 - Intro to User-Defined Functions.ipynb

--- a/Chapter 09 - Intro to User-Defined Functions.ipynb
+++ b/Chapter 09 - Intro to User-Defined Functions.ipynb
@@ -57,7 +57,7 @@
     "~~~\n",
     "\n",
     "<br>\n",
-    "User-defined functions can have any nonnegative number of arguments (zero or more). However, mandatory arguments must come before optional arguments, and optional arguments must come before variable arguments. If you are a bit rusty on your argument types, return to <strong>Chapter 1: Setting Up for Success</strong> for a refresher."
+    "User-defined functions can have any nonnegative number of arguments (zero or more). However, mandatory arguments must come before optional arguments, and optional arguments must come before variable arguments. If you are a bit rusty on your argument types, return to <strong>Chapter 1: Before Learning Anything Else, Learn This</strong> for a refresher."
    ]
   },
   {
