Update Chapter 04 - Numbers, Comparisons, and Randomness.ipynb

--- a/Chapter 04 - Numbers, Comparisons, and Randomness.ipynb
+++ b/Chapter 04 - Numbers, Comparisons, and Randomness.ipynb
@@ -1335,7 +1335,7 @@
    },
    "source": [
     "<hr style=\"height:.9px;border:none;color:#333;background-color:#333;\" /><br>\n",
-    "Remember, we can set a seed so that we always get the same result. This becomes very important in later chapters. For now, however, we can use this technique to <em>game</em> our guessing game. This is, potentially, a great way to impress your friends that do not know how to read code, and the method <strong>random.seed()</strong> will help us in doing so. If this is your first time using this method, take a minute to look at the help documentation (it briefly explains how the random package generates random numbers... interesting, right!).\n",
+    "Remember, we can set a seed so that we always get the same result. This becomes very important in later chapters. For now, however, we can use this technique to <em>game</em> our guessing game. This is, potentially, a great way to impress your friends that do not know how to read code, and the method <strong>random.seed(&nbsp;)</strong> will help us in doing so. If this is your first time using this method, take a minute to look at the help documentation (it briefly explains how the random package generates random numbers... interesting, right!).\n",
     "<br><br>\n",
     "<hr style=\"height:.9px;border:none;color:#333;background-color:#333;\" />"
    ]
