Update Chapter 05 - Lists and List Operations.ipynb

--- a/Chapter 05 - Lists and List Operations.ipynb
+++ b/Chapter 05 - Lists and List Operations.ipynb
@@ -181,8 +181,8 @@
     "\n",
     "# Printing object types\n",
     "print(f\"\"\"\n",
-    "my_variable:  {type(my_variable)}\n",
-    "my_list: \\t {type(my_list)}\n",
+    "my_variable: {type(my_variable)}\n",
+    "my_list:     {type(my_list)}\n",
     "\"\"\")"
    ]
   },
