Update Chapter 07 - for Loops and Basic Data Manipulation.ipynb

--- a/Chapter 07 - for Loops and Basic Data Manipulation.ipynb
+++ b/Chapter 07 - for Loops and Basic Data Manipulation.ipynb
@@ -295,6 +295,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -524,6 +538,20 @@
     "    # adding an inner loop\n",
     "    for letter in item:\n",
     "        print(letter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -996,39 +1024,39 @@
    },
    "outputs": [],
    "source": [
-    "## Sample Solution 7.5.4 ##\n",
-    "\n",
-    "# importing necessary packages\n",
-    "import numpy as np # mathematical essentials\n",
-    "import random      # randomness\n",
-    "\n",
-    "\n",
-    "# randomly selecting items\n",
-    "ad_item_1 = random.choice(enhanced_inventory)\n",
-    "ad_item_2 = random.choice(enhanced_inventory)\n",
-    "\n",
-    "\n",
-    "# allowing for user personalization\n",
-    "shop_name = input(\"Create a name for the clothing shop.\\n\")\n",
-    "sale_name = input(\"Create a name for the sales event.\\n\")\n",
-    "\n",
-    "\n",
-    "# developing a dynamic flier\n",
-    "print(f\"\"\"\n",
-    "{'*' * 40}\n",
-    "\n",
-    "Once again, {shop_name} is having their famous {sale_name} this weekend!\n",
-    "\n",
-    "All items have been discounted to 90% of their original price!\n",
-    "\n",
-    "Our beautiful {ad_item_1[0]}s have been marked down from {ad_item_1[1]} to {ad_item_1[2]}!\n",
-    "Our long-lasting {ad_item_2[0]}s have been marked down from {ad_item_2[1]} to {ad_item_2[2]}!\n",
-    "\n",
-    "Don't miss out! Come see our entire selection of discounted merchandise at\n",
-    "{sale_name} this weekend at {shop_name}!\n",
-    "\n",
-    "{'*' * 40}\n",
-    "\"\"\")\n"
+  ## Sample Solution 7.5.4 ##
+  
+  # importing necessary packages
+  import numpy as np # mathematical essentials
+  import random      # randomness
+  
+  
+  # randomly selecting items
+  ad_item_1 = random.choice(enhanced_inventory)
+  ad_item_2 = random.choice(enhanced_inventory)
+  
+  
+  # allowing for user personalization
+  shop_name = input("Create a name for the clothing shop.\n")
+  sale_name = input("Create a name for the sales event.\n")
+  
+  
+  # developing a dynamic flier
+  print(f"""
+  {'*' * 40}
+  
+  Once again, {shop_name} is having their famous {sale_name} this weekend!
+  
+  All items have been discounted to 90% of their original price!
+  
+  Our beautiful {ad_item_1[0]}s have been marked down from {ad_item_1[1]:.2f} to {ad_item_1[2]:.2f}!
+  Our long-lasting {ad_item_2[0]}s have been marked down from {ad_item_2[1]:.2f} to {ad_item_2[2]:.2f}!
+  
+  Don't miss out! Come see our entire selection of discounted merchandise at
+  {sale_name} this weekend at {shop_name}!
+  
+  {'*' * 40}
+  """)\n"
    ]
   },
   {
